--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <!-- <link rel="stylesheet" type="text/css" href="html/css/litc_stylesheet.css"> -->
-        <link rel="stylesheet" type="text/css" href="html/css/fonts.css">
+        <link rel="stylesheet" type="text/css" href="html/css/litc_stylesheet.css">
+        <!-- <link rel="stylesheet" type="text/css" href="html/css/fonts.css">
         <link rel="stylesheet" type="text/css" href="html/css/global.css">
         <link rel="stylesheet" type="text/css" href="html/css/home.css">
-        <link rel="stylesheet" type="text/css" href="html/css/partial.css">
+        <link rel="stylesheet" type="text/css" href="html/css/partial.css"> -->
     </head>
     <body>
         <div id="test" style="height:500px;width:500px;border-color: red;border-style:dashed;">
